Bug 1100912, make dir-state to propagate through shadow DOM, r=mrbkap